--- a/pixmix-backend/dockerfile
+++ b/pixmix-backend/dockerfile
@@ -1,22 +1,36 @@
+# Build stage
+FROM node:18-slim AS builder
+
+# Create app directory
+WORKDIR /usr/src/app
+
+# Copy package files and install dependencies (including dev dependencies)
+COPY package*.json ./
+RUN npm install
+
+# Copy source code
+COPY . .
+
+# Build TypeScript code
+RUN npm run build
+
+# Production stage
 FROM node:18-slim
 
 # Create app directory
 WORKDIR /usr/src/app
 
-# Copy package files and install dependencies
+# Copy package files and install only production dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm install --production
 
-# Copy app source
-COPY . .
+# Copy built application from build stage
+COPY --from=builder /usr/src/app/dist ./dist
 
 # Create uploads directory
 RUN mkdir -p uploads
 # Set the right permissions
 RUN chmod 777 uploads
-
-# Build TypeScript code
-RUN npm run build
 
 # Set environment variables
 ENV NODE_ENV=production
