--- a/pixmix-frontend/package.json
+++ b/pixmix-frontend/package.json
@@ -32,6 +32,7 @@
     "expo-linking": "~7.0.5",
     "expo-modules-core": "~2.2.3",
     "expo-notifications": "^0.29.14",
+    "expo-random": "^14.0.1",
     "expo-router": "~4.0.20",
     "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.24",
